upd next imeges

--- a/versione-base/index.html
+++ b/versione-base/index.html
@@ -13,10 +13,10 @@
     <div class="container">
         <div class="items">
 
-            <div class="item active">
+            <!-- <div class="item active">
 
 
-            </div>
+            </div> -->
 
 
             <div class="prev"></div>
